// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressAutocomplete — snapshot > GPS spinner: shows spinner while GPS is locating > gps-spinner 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value=""
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        disabled=""
        title="Usar localização atual"
        type="button"
      >
        <span
          data-testid="icon-loading"
        />
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > dropdown hover: highlights first item on mouseEnter with bg-primary/10 and aria-selected=true > dropdown-hover 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-controls="address-suggestions"
      aria-expanded="true"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value="Av. Paulista"
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
      <button
        aria-label="Limpar localização"
        class="text-muted-foreground hover:bg-muted hover:text-foreground flex size-5 items-center justify-center rounded-full transition-colors"
        type="button"
      >
        <span
          data-testid="icon-x"
        />
      </button>
    </span>
    <div
      class="bg-background absolute top-full right-0 left-0 z-50 mt-1 max-h-64 overflow-y-auto rounded-xl border p-1 shadow-lg"
      id="address-suggestions"
      role="listbox"
    >
      <button
        aria-selected="true"
        class="flex w-full items-start gap-3 rounded-lg px-3 py-2.5 text-left text-sm transition-colors bg-primary/10 text-primary"
        role="option"
        type="button"
      >
        <span
          data-testid="icon-mappin"
        />
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="truncate font-medium"
          >
            Avenida Paulista, Bela Vista, São Paulo - SP, Brasil
          </p>
          <p
            class="text-muted-foreground mt-0.5 text-xs"
          >
            São Paulo, SP
          </p>
        </div>
        <span
          aria-label="Alta relevância"
          class="shrink-0 self-center text-[11px] text-amber-500"
          title="Alta relevância"
        >
          ★
        </span>
      </button>
      <button
        aria-selected="false"
        class="flex w-full items-start gap-3 rounded-lg px-3 py-2.5 text-left text-sm transition-colors hover:bg-muted"
        role="option"
        type="button"
      >
        <span
          data-testid="icon-mappin"
        />
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="truncate font-medium"
          >
            Rua Augusta, Consolação, São Paulo - SP, Brasil
          </p>
          <p
            class="text-muted-foreground mt-0.5 text-xs"
          >
            São Paulo, SP
          </p>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > empty state: renders input with MapPin icon and GPS button, no dropdown, no clear > empty 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value=""
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > fetch error: shows input with typed text, no dropdown, no loading spinner, GPS icon + clear button visible > fetch-error 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value="Rua Fetch Falha Unica"
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
      <button
        aria-label="Limpar localização"
        class="text-muted-foreground hover:bg-muted hover:text-foreground flex size-5 items-center justify-center rounded-full transition-colors"
        type="button"
      >
        <span
          data-testid="icon-x"
        />
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > geo store placeholder: shows city name as placeholder when input is empty and geo store has city > geo-placeholder 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="São Paulo"
      role="combobox"
      value=""
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > input filled: shows filled input with clear button and filled GPS icon after selection > input-filled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value="Avenida Paulista, Bela Vista, São Paulo - SP, Brasil"
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
      <button
        aria-label="Limpar localização"
        class="text-muted-foreground hover:bg-muted hover:text-foreground flex size-5 items-center justify-center rounded-full transition-colors"
        type="button"
      >
        <span
          data-testid="icon-x"
        />
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > results dropdown: shows dropdown with result items after fetch > results-dropdown 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-controls="address-suggestions"
      aria-expanded="true"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value="Av. Paulista"
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
      <button
        aria-label="Limpar localização"
        class="text-muted-foreground hover:bg-muted hover:text-foreground flex size-5 items-center justify-center rounded-full transition-colors"
        type="button"
      >
        <span
          data-testid="icon-x"
        />
      </button>
    </span>
    <div
      class="bg-background absolute top-full right-0 left-0 z-50 mt-1 max-h-64 overflow-y-auto rounded-xl border p-1 shadow-lg"
      id="address-suggestions"
      role="listbox"
    >
      <button
        aria-selected="false"
        class="flex w-full items-start gap-3 rounded-lg px-3 py-2.5 text-left text-sm transition-colors hover:bg-muted"
        role="option"
        type="button"
      >
        <span
          data-testid="icon-mappin"
        />
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="truncate font-medium"
          >
            Avenida Paulista, Bela Vista, São Paulo - SP, Brasil
          </p>
          <p
            class="text-muted-foreground mt-0.5 text-xs"
          >
            São Paulo, SP
          </p>
        </div>
        <span
          aria-label="Alta relevância"
          class="shrink-0 self-center text-[11px] text-amber-500"
          title="Alta relevância"
        >
          ★
        </span>
      </button>
      <button
        aria-selected="false"
        class="flex w-full items-start gap-3 rounded-lg px-3 py-2.5 text-left text-sm transition-colors hover:bg-muted"
        role="option"
        type="button"
      >
        <span
          data-testid="icon-mappin"
        />
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="truncate font-medium"
          >
            Rua Augusta, Consolação, São Paulo - SP, Brasil
          </p>
          <p
            class="text-muted-foreground mt-0.5 text-xs"
          >
            São Paulo, SP
          </p>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressAutocomplete — snapshot > reverse geocode error: shows raw coords input, clear button visible, no dropdown, GPS icon after GPS locate fails > reverse-geocode-error 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <span
      data-testid="icon-mappin"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-label="Localização"
      autocomplete="off"
      class="h-12 border-0 bg-transparent pr-16 pl-10 text-left shadow-none focus-visible:ring-0"
      placeholder="CEP, cidade ou endereço…"
      role="combobox"
      value="-23.5505, -46.6333"
    />
    <span
      class="absolute top-1/2 right-2.5 flex -translate-y-1/2 items-center gap-0.5"
    >
      <button
        aria-label="Usar localização atual"
        class="text-muted-foreground hover:bg-primary/10 hover:text-primary flex size-6 items-center justify-center rounded-full transition-colors"
        title="Usar localização atual"
        type="button"
      >
        <span
          class="inline-flex transition-colors duration-300 text-emerald-500"
          style="animation: geo-ping 0.5s ease-out;"
        >
          <span
            data-testid="icon-locate"
          />
        </span>
      </button>
      <button
        aria-label="Limpar localização"
        class="text-muted-foreground hover:bg-muted hover:text-foreground flex size-5 items-center justify-center rounded-full transition-colors"
        type="button"
      >
        <span
          data-testid="icon-x"
        />
      </button>
    </span>
  </div>
</DocumentFragment>
`;
